[gd_scene load_steps=20 format=2]

[ext_resource path="res://resources/Objects/preview.tscn" type="PackedScene" id=1]
[ext_resource path="res://online_mode/level_editor/EditorPremade/environment.tscn" type="PackedScene" id=2]
[ext_resource path="res://global/Player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://global/GUI/Item_Select.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/Objects/delete.tscn" type="PackedScene" id=5]
[ext_resource path="res://online_mode/level_editor/scripts/Editor_Camera.gd" type="Script" id=6]
[ext_resource path="res://online_mode/level_editor/scripts/Editor_Object.gd" type="Script" id=7]
[ext_resource path="res://online_mode/level_editor/scripts/FileDialog.gd" type="Script" id=8]
[ext_resource path="res://resources/Materials/grid.tres" type="Material" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://online_mode/level_editor/scripts/play.gd" type="Script" id=11]
[ext_resource path="res://online_mode/level_editor/scripts/level_editor.gd" type="Script" id=12]
[ext_resource path="res://resources/Shaders/pixel.tres" type="Material" id=13]
[ext_resource path="res://scenes/inventory.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/settings.tscn" type="PackedScene" id=15]
[ext_resource path="res://resources/font/button.tres" type="DynamicFont" id=17]

[sub_resource type="Theme" id=12]

[sub_resource type="PlaneMesh" id=11]

[sub_resource type="BoxShape" id=13]

[node name="main" type="Spatial"]
script = ExtResource( 12 )

[node name="pixelizer" type="TextureRect" parent="."]
material = ExtResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 10 )
stretch_mode = 1
flip_v = true

[node name="pixelizer2" type="Sprite" parent="."]
visible = false
material = ExtResource( 13 )
position = Vector2( 634.5, 352.5 )
scale = Vector2( 19.7969, 11.1094 )
texture = ExtResource( 10 )
flip_v = true

[node name="play" type="Button" parent="."]
margin_left = 140.0
margin_top = 648.0
margin_right = 171.0
margin_bottom = 663.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 17 )
text = "PLAY"
script = ExtResource( 11 )
ui = NodePath("../UI")
playerSpawn = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Item_Select" parent="UI" instance=ExtResource( 4 )]
margin_left = 12.0
margin_top = 8.0
margin_right = 52.0
margin_bottom = 50.0

[node name="Save" type="Button" parent="UI"]
visible = false
margin_left = 1273.0
margin_top = 677.0
margin_right = 1305.0
margin_bottom = 692.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 43.0625, 9.9375 )
custom_fonts/font = ExtResource( 17 )
text = "SAVE"

[node name="New" type="Button" parent="UI"]
visible = false
margin_left = 140.0
margin_top = 680.0
margin_right = 167.0
margin_bottom = 695.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 43.0625, 9.9375 )
custom_fonts/font = ExtResource( 17 )
text = "NEW"

[node name="Load" type="Button" parent="UI"]
visible = false
margin_left = 1142.0
margin_top = 576.0
margin_right = 1174.0
margin_bottom = 591.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 17 )
text = "LOAD"

[node name="FileDialog" type="FileDialog" parent="UI"]
visible = true
margin_left = 355.0
margin_top = 146.0
margin_right = 670.0
margin_bottom = 363.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 12 )
filters = PoolStringArray( "*.tscn" )
script = ExtResource( 8 )

[node name="inventory" parent="UI" instance=ExtResource( 14 )]
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="ui" parent="UI/inventory" index="1"]
visible = false

[node name="settings" parent="UI" instance=ExtResource( 15 )]
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="level" type="Spatial" parent="."]

[node name="floor" type="CSGMesh" parent="level"]
transform = Transform( 69, 0, 0, 0, 1, 0, 0, 0, 69, 0, 0, 0 )
use_collision = true
mesh = SubResource( 11 )
material = ExtResource( 9 )

[node name="environment" parent="level" instance=ExtResource( 2 )]

[node name="wall" type="CSGBox" parent="level"]
use_collision = true
width = 138.0
height = 8.0
depth = 138.0

[node name="playarea" type="CSGBox" parent="level/wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1 )
operation = 2
width = 128.0
height = 10.0
depth = 128.0
material = ExtResource( 9 )

[node name="Editor_Camera" type="KinematicBody" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Editor_Camera"]
transform = Transform( 23, 0, 0, 0, 1, 0, 0, 0, 13, -0.00794983, 35.0018, -0.00646972 )
shape = SubResource( 13 )

[node name="Camera" type="Camera" parent="Editor_Camera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 32, 0 )
projection = 1
size = 25.0

[node name="preview" parent="." instance=ExtResource( 1 )]

[node name="delete" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Editor_Object" type="Spatial" parent="."]
script = ExtResource( 7 )

[connection signal="mouse_entered" from="play" to="play" method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="play" to="play" method="_on_play_mouse_exited"]
[connection signal="pressed" from="play" to="play" method="_on_play_pressed"]
[connection signal="mouse_entered" from="UI/Save" to="UI/FileDialog" method="_on_Save_mouse_entered"]
[connection signal="mouse_exited" from="UI/Save" to="UI/FileDialog" method="_on_Save_mouse_exited"]
[connection signal="pressed" from="UI/Save" to="UI/FileDialog" method="_on_Save_pressed"]
[connection signal="mouse_entered" from="UI/New" to="UI/FileDialog" method="_on_Save_mouse_entered"]
[connection signal="mouse_exited" from="UI/New" to="UI/FileDialog" method="_on_Save_mouse_exited"]
[connection signal="pressed" from="UI/New" to="UI/FileDialog" method="_on_New_pressed"]
[connection signal="mouse_entered" from="UI/Load" to="UI/FileDialog" method="_on_Load_mouse_entered"]
[connection signal="mouse_exited" from="UI/Load" to="UI/FileDialog" method="_on_Load_mouse_exited"]
[connection signal="pressed" from="UI/Load" to="UI/FileDialog" method="_on_Load_pressed"]
[connection signal="confirmed" from="UI/FileDialog" to="UI/FileDialog" method="_on_FileDialog_confirmed"]
[connection signal="popup_hide" from="UI/FileDialog" to="UI/FileDialog" method="_on_FileDialog_popup_hide"]

[editable path="UI/inventory"]
[editable path="UI/settings"]
[editable path="level/environment"]
